Fixed fieldset indentation

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1478,14 +1478,14 @@
             <th class="sheet-default-header" >Spec</th>
             <th class="sheet-default-header" ># of<br>Attack</th>
             <th class="sheet-default-header" >Attack<br>Adj.</th>
-            <th class="sheet-default-header" rowspan="2" >THAC0</th>
+            <th class="sheet-default-header" colspan="2" >THAC0</th>
             <th class="sheet-default-header" >Crit</th>
             <th class="sheet-default-header" >Range</th>
             <th class="sheet-default-header" >Size</th>
             <th class="sheet-default-header" >S</th>
             <th class="sheet-default-header" >P</th>
             <th class="sheet-default-header" >B</th>
-            <th class="sheet-default-header" rowspan="2" >Speed</th>
+            <th class="sheet-default-header" colspan="2" >Speed</th>
     </tr>
     <tr>
             <td class="sheet-centering"><input type='checkbox' name='attr_strbonus' title="@{repeating_weapons_$X_dexbonus}" value='1' checked /><span></span></td>
