--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -699,7 +699,7 @@
                         <div class="hpInfo">
                             <div class="flex hpmpHeader">Hit Points</div></div>
                             <div class="hp">
-                                <img src="https://i.imgur.com/aHmT47V.png" alt="whiteheart" class="icon">
+                                <img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ryuutama/images/heart.png" alt="whiteheart" class="icon">
                                 <input type='checkbox' class='penaltyCondition' name='attr_hpUnconscious' value='1'/>
                                 <input type='checkbox' class='deathCondition' name='attr_hpDeath' value='1'/>
                                 <input type='number' class='stats' name='attr_healthPoints' value='8'/> / 
@@ -708,7 +708,7 @@
                             <div class="mpInfo"><div class="flex hpmpHeader">Mental Points</div>
                         </div>
                         <div class="mp">
-                            <img src="https://i.imgur.com/Ha2CG5u.png" alt="sevenpointstar" class="icon">
+                            <img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ryuutama/images/sevenpointstar.png" alt="sevenpointstar" class="icon">
                             <input type='checkbox' class='penaltyCondition' name='attr_mpUnconscious' value='1'/>
                             <input type='number' class='stats' name='attr_magicPoints' value='8' min='0'/> / 
                             <input type='number' class='stats' name='attr_magicPoints_max' value='8' min='1'/>
@@ -726,7 +726,7 @@
                             </label>
                         </div>
                         <div class="condition flex">
-                            <img src="https://i.imgur.com/rnX67uJ.png" alt="condition" class="icon">
+                            <img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ryuutama/images/condition.png" alt="condition" class="icon">
                             <label class="flex-column condionBar">2<input type="radio" name="attr_condition" value="2"></label>
                             <label class="flex-column condionBar">3<input type="radio" name="attr_condition" value="3"></label>
                             <label class="flex-column condionBar">4<input type="radio" name="attr_condition" value="4"></label>
