--- a/The Fantasy Trip/TFT.html
+++ b/The Fantasy Trip/TFT.html
@@ -1,82 +1,108 @@
+<!DOCTYPE html>
 <div class="block">
-  <label>Attributes</label>
-  <b>ST</b>
-  <input type=number width=5 style='width: 5em;' name="attr_ST" value="8"/>
-  <b>Adj</b>
-  <input type=number width=5 style='width: 5em;' name="attr_STcurrent" value="8"/>
-  <button type=roll value="/roll 3d6"></button>
+	<label>Name:</label>
+	<input type=text  style='width: 30em;' name="attr_cname"/>
 </div>
 
 <br>
 
 <div class="block">
-  <b>DX</b>
-  <input type=number width=5 style='width: 5em;' name="attr_DX" value="8"/>
-  <b>Adj</b>
-  <input type=number width=5 style='width: 5em;' name="attr_DXcurrent" value="8"/>
-  <button type=roll value="/roll 3d6"></button>
+	<label>Attributes</label>
+	<b>ST</b>
+	<input type=number width=5 style='width: 5em;' name="attr_ST_max" value="8"/>
+	<b>Adj</b>
+	<input type=number width=5 style='width: 5em;' name="attr_ST" value="8"/>
+	<button type=roll value="/roll 3d6"></button>
 </div>
 
 <br>
 
 <div class="block">
-  <b>IQ</b>
-  <input type=number width=5 style='width: 5em;' name="attr_IQ" value="8"/>
-  <b>Adj</b>
-  <input type=number width=5 style='width: 5em;' name="attr_IQcurrent" value="8"/>
-  <button type=roll value="/roll 3d6"></button>
+	<b>DX</b>
+	<input type=number width=5 style='width: 5em;' name="attr_DX_max" value="8"/>
+	<b>Adj</b>
+	<input type=number width=5 style='width: 5em;' name="attr_DX" value="8"/>
+	<button type=roll value="/roll 3d6"></button>
 </div>
 
 <br>
 
 <div class="block">
-  <b>MA</b>
-  <input type=number width=5 style='width: 5em;' name="attr_MA" value="10"/>
-  <b>Adj</b>
-  <input type=number width=5 style='width: 5em;' name="attr_MAcurrent" value="10"/>
+	<b>IQ</b>
+	<input type=number width=5 style='width: 5em;' name="attr_IQ_max" value="8"/>
+	<b>Adj</b>
+	<input type=number width=5 style='width: 5em;' name="attr_IQ" value="8"/>
+	<button type=roll value="/roll 3d6"></button>
 </div>
 
 <br>
 
 <div class="block">
-  <label>Weapons</label>
-  <b style='display: inline-block; width: 10em;'>Name</b>
-  <b style='display: inline-block; width: 5em;'>Damage</b>
-  <b style='display: inline-block; width: 10em;'>Notes</b>
-  <br>
-  <fieldset class=repeating_weapons>
-    <input type=text name=attr_weaponname style='width: 10em;'>
-    <input type=text name=attr_weapondamage style='width: 5em;'>
-    <input type=text name=attr_weaponnotes style='width: 30em;'>
-    <button type=roll value="/roll @{weapondamage}"></button>
-  </fieldset>
+	<b>MA</b>
+	<input type=number width=5 style='width: 5em;' name="attr_MA_max" value="10"/>
+	<b>Adj</b>
+	<input type=number width=5 style='width: 5em;' name="attr_MA" value="10"/>
 </div>
 
 <br>
 
 <div class="block">
-  <label>Spells</label>
-  <b style='display: inline-block; width: 10em;'>Name</b>
-  <b style='display: inline-block; width: 5em;'>Damage</b>
-  <b style='display: inline-block; width: 10em;'>Notes</b>
-  <br>
-  <fieldset class=repeating_spells>
-    <input type=text name=attr_spellname style='width: 10em;'>
-    <input type=text name=attr_spelldamage style='width: 5em;'>
-    <input type=text name=attr_spellnotes style='width: 30em;'>
-    <button type=roll value="/roll @{spelldamage}"></button>
-  </fieldset>
+	<label>Weapons</label>
+	<b style='display: inline-block; width: 10em;'>Name</b>
+	<b style='display: inline-block; width: 5em;'>Damage</b>
+	<b style='display: inline-block; width: 10em;'>Notes</b>
+	<br>
+	<fieldset class=repeating_weapons>
+		<input type=text name=attr_weaponname style='width: 10em;'>
+		<input type=text name=attr_weapondamage value="1d6" style='width: 5em;'>
+		<input type=text name=attr_weaponnotes style='width: 30em;'>
+		<button type=roll value="@{character_name} Attacks with their @{weaponname}! Roll [[3d6]] vs [[@{DX}]]; Damage [[@{weapondamage}]]"></button>
+	</fieldset>
+</div>
+
+<br>
+
+<div class="block">
+	<label>Armor and Shields</label>
+	<b style='display: inline-block; width: 10em;'>Name</b>
+	<b style='display: inline-block; width: 10em;'>Hits Blocked</b>
+	<b style='display: inline-block; width: 10em;'>Notes</b>
+	<br>
+	<fieldset class=repeating_armor>
+		<input type=text name=attr_defensename value="" style='width: 10em;'>
+		<input type=text name=attr_hitsblocked value="0" style='width: 10em;'>
+		<input type=text name=attr_defensenotes style='width: 30em;'>
+		</fieldset>
+</div>
+<div class="block">
+	<b style='display: inline-block; width: 5em;'>Total Hits Blocked </b>
+	<input type=text name=attr_totalblock value="0" />
+
+<br>
+
+<div class="block">
+	<label>Spells</label>
+	<b style='display: inline-block; width: 10em;'>Name</b>
+	<b style='display: inline-block; width: 5em;'>Damage</b>
+	<b style='display: inline-block; width: 10em;'>Notes</b>
+	<br>
+	<fieldset class=repeating_spells>
+		<input type=text name=attr_spellname style='width: 10em;'>
+		<input type=text name=attr_spelldamage style='width: 5em;'>
+		<input type=text name=attr_spellnotes style='width: 30em;'>
+		<button type=roll value="@{character_name} casts @{spellname}! Roll [[3d6]] vs [[@{DX}]]; Damage [[@{spelldamage}]]></button>
+	</fieldset>
 </div>
 
 <br>
 
 <span class="sheet-spacer"></span>
-  <h4 class="sheet-center">Spells and Talents</h4>
-  <textarea name="attr_spells" title="Spells"></textarea>
+	<h4 class="sheet-center">Spells and Talents</h4>
+	<textarea name="attr_spells" title="Spells"></textarea>
 
 <br>
 
 <span class="sheet-spacer"></span>
-  <h4 class="sheet-center">Inventory</h4>
-  <textarea name="attr_inventory" title="Inventory"></textarea>
-  
+	<h4 class="sheet-center">Inventory</h4>
+	<textarea name="attr_inventory" title="Inventory"></textarea>
+	
