rename page sections

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -20,13 +20,13 @@
 <input type="radio" class="attr sheetoptions settingssheet" name="attr_pagenumber" title="Settings" value="settings" />
 <span class="sheet-attr" data-i18n="settings" >Settings</span>
 
-<input type="radio" class="attr sheetoptions page1" name="attr_pagenumber" title="Page1" value="1" checked="checked" />
+<input type="radio" class="attr sheetoptions page1-sheet" name="attr_pagenumber" title="Page1" value="1" checked="checked" />
 <span class="sheet-attr" data-i18n="page-1" >Page 1</span>
 
-<input type="radio" class="attr sheetoptions page2" name="attr_pagenumber" title="Page2" value="2" />
+<input type="radio" class="attr sheetoptions page2-sheet" name="attr_pagenumber" title="Page2" value="2" />
 <span class="sheet-attr" data-i18n="page-2" >Page 2</span>
 
-<input type="radio" class="attr sheetoptions page3" name="attr_pagenumber" title="Page3" value="3" />
+<input type="radio" class="attr sheetoptions page3-sheet" name="attr_pagenumber" title="Page3" value="3" />
 <span class="sheet-attr" data-i18n="page-3" >Page 3</span>
 
 <div class="spacer"></div>
@@ -131,7 +131,7 @@
 <div class="background-image"></div>
 
 <!-- DICE ROLLER -->
-<div class="main diceroller">
+<div class="page1 diceroller">
     <table>
         <tbody>
             <tr>
@@ -227,7 +227,7 @@
 </div>
 
 <!-- PAGE 1 -->
-<div class="main">
+<div class="page1">
     <!-- CHARACTER INFO FIELDS -->
     <div class="3colrow">
         <table>
@@ -1446,8 +1446,9 @@
         </table>
     </div>
 </div>
+
 <!-- PAGE 2 -->
-<div class="expandedsheet">
+<div class="page2">
 
     <div class="leftcolumn" style="width: 447px;">
 
@@ -1508,7 +1509,7 @@
 </div>
 
 <!-- PAGE 3 -->
-<div class="expandedsheet2" style="width: 100%;">
+<div class="page3" style="width: 100%;">
 
     <div class="leftcolumn">
     <div class="sheet-customroll">
