use spacer instead of margin-top for consistency

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -330,7 +330,7 @@
         </table>
     </div>
 
-    <div class="el_spacer"></div>
+    <div class="spacer"></div>
 
     <!-- ATTRIBUTE FIELDS -->
     <div class="3colrow">
