--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -3,7 +3,7 @@
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
-  <div class="tabs"><img alt="Shadowrun black and metallic logo" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/src/imgs//ShadowrunLogo.png"/>
+  <div class="tabs"><img alt="Shadowrun logo" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/shadowrun4ev1/Shadowrun4thEdition/src/imgs//logo.png"/>
     <h1 data-i18n="character">Character</h1>
     <label data-i18n-title="character name" title="character name">
       <input type="text" name="attr_character_name" placeholder="Character name" title="@{character_name}"/>
