--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -23,8 +23,9 @@
 
 <div class="settings">
     <div class="spacer"></div>
+    <div class="spacer"></div>
 
-    <br><span class="edition" data-i18n="first-edition">1st Edition</span><br>
+    <div class="edition" data-i18n="first-edition">1st Edition</div>
 
     <input type="radio" class="attr sheetoptions" name="attr_sheettype" title="Mortal" value="mortal1" checked="checked" style="width: 136px;"/>
     <span class="attr" style="margin-left: -140px;" data-i18n="chronicles-of-darkness" >Chronicles of Darkness</span>
@@ -53,7 +54,9 @@
     <input type="radio" class="attr sheetoptions" name="attr_sheettype" title="Mummy" value="mummy1" style="width: 117px;"/>
     <span class="attr" style="margin-left: -121px;" data-i18n="mummy-the-curse" >Mummy the Curse</span>
 
-    <br><br><span class="edition" data-i18n="second-edition">2nd Edition</span><br>
+    <div class="spacer"></div>
+    
+    <div class="edition" data-i18n="second-edition">2nd Edition</div>
 
     <input type="radio" class="attr sheetoptions" name="attr_sheettype" title="Mortal" value="mortal2" style="width: 136px;"/>
     <span class="attr" style="margin-left: -140px;" data-i18n="chronicles-of-darkness" >Chronicles of Darkness</span>
