--- a/Shadowrun4thEdition/src/html/hidden.html
+++ b/Shadowrun4thEdition/src/html/hidden.html
@@ -15,7 +15,6 @@
 <input type="hidden" name="attr_primary_range_weapon_skill" />
 <input type="hidden" name="attr_primary_range_weapon_damage" />
 <input type="hidden" name="attr_primary_range_weapon_dicepool" />
-<input type="hidden" name="attr_primary_range_weapon_acc" />
 <input type="hidden" name="attr_primary_range_weapon_ap" />
 <input type="hidden" name="attr_primary_range_weapon_mode" />
 <input type="hidden" name="attr_primary_range_weapon_recoil" />
@@ -26,12 +25,11 @@
 <input type="hidden" name="attr_primary_melee_weapon_skill" />
 <input type="hidden" name="attr_primary_melee_weapon_damage" />
 <input type="hidden" name="attr_primary_melee_weapon_dicepool" />
-<input type="hidden" name="attr_primary_melee_weapon_acc" />
 <input type="hidden" name="attr_primary_melee_weapon_ap" />
 <input type="hidden" name="attr_primary_melee_weapon_reach" />
 
 <input type="hidden" name="attr_initiative_mod" value="6" />
-<input type="hidden" name="attr_initiative_dice" min="1" max="5" value="1" />
+<input type="hidden" name="attr_initiative_passes" min="1" max="5" value="1" />
 <input type="hidden" name="attr_astral_mod" value="6" />
 <input type="hidden" name="attr_astral_dice" max="5" value="3" />
 <input type="hidden" name="attr_matrix_mod" value="0" />
