--- a/Shadowrun4thEdition/src/html/static.html
+++ b/Shadowrun4thEdition/src/html/static.html
@@ -132,7 +132,19 @@
 					</div>
 					<div class="display"><span name="attr_edge" title="@{edge}"></span></div>
 				</div>
-			</div>
+			   <div class="edg-hex" style='margin-top: 5%;'>
+          <input class="edge-zero"type="hidden" name="attr_edge_hex" value="0"/>
+          <input class="hex-hider"type="hidden" name="attr_edge" value="1"/>
+          <input type="checkbox" name="attr_edge_hex" value="1" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="2" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="3" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="4" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="5" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="6" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="7" /><span class="hexagon"></span>
+          <input type="checkbox" name="attr_edge_hex" value="8" /><span class="hexagon"></span>
+        </div>
+      </div>
 			<div class="attr-col attr-col-right">
 				<!-- ~~:+: Essence :+:~~ -->
 				<label data-i18n="essence">Essence</label>
@@ -163,64 +175,64 @@
 					</div>
 				</div>
 				<!-- ~~:+: Initiative :+:~~ -->
-				<input type="hidden" name="attr_initiative_mod" value="6" />
-				<input type="hidden" name="attr_initiative_dice" value="1" min="1" max="5" />
-				<button class="attr-ini" name="initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[(@{initiative_mod}+@{wounds_toggle}+@{modifiers_toggle})+(@{initiative_dice})d6cf0 &{tracker}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span class="attr-ini red" data-i18n="initiative">Initiative</span></button>
-				<div class="attr-und attr-ini">
+				<input type="hidden" name="attr_initiative" value="6" />
+				<button class="attr-ini" name="initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{initiative}}}{{base=^{base}}}{{dice=[[((@{initiative}+@{modifiers_toggle})d6>5cf0)+(@{initiative})+(@{wounds_toggle}) &{tracker}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}">
+          <span class="attr-ini red" data-i18n="initiative">Initiative</span>
+        </button>
+				<div class="attr-und">
 					<div class="settings">
-						<input type="number" name="attr_initiative_mod_modifier" value="0" placeholder="0" title="@{initiative_modifier}" /><span class="tiny-span"> + </span>
-						<input type="number" name="attr_initiative_dice_modifier" value="0" min="0" max="4" placeholder="modifier" title="@{initiative_dice_modifier}" />
-						<span class="tiny-span"> = </span>
-						<span name="attr_display_initiative_mod"></span><span class="tiny-span" title="@{initiative_mod}"> + </span>
-						<span name="attr_initiative_dice"></span><span class="tiny-span" title="@{initiative_dice}" data-i18n="d6"> d6</span>
+						<input type="number" name="attr_initiative_modifier" value="0" placeholder="0" title="@{initiative_modifier}" />
+            <span class="tiny-span"> = </span>
+            <span name="attr_display_initiative" title="@{initiative}"></span>
 					</div>
 					<div class="display">
-						<span name="attr_display_initiative_mod" title="@{initiative_mod}"></span><span class="tiny-span"> + </span>
-						<span name="attr_initiative_dice" title="@{initiative_dice}"></span><span class="tiny-span" data-i18n="d6"> d6</span>
+						<span name="attr_display_initiative" title="@{initiative}"></span>
 					</div>
 				</div>
+        <!-- ~~:+: Initiative Pass :+:~~ -->
+        <input type="hidden" name="attr_initiative_passes_base" value="1"  />
+        <input type="hidden" name="attr_initiative_passes" value="1" min="1" />
+        <label class="attr-ini red" data-i18n="Initiative Passes">Initiative Passes</label>
+        <div class="attr-und">
+          <div class="settings">
+            <input type="number" name="attr_initiative_passes_modifier" value="1" placeholder="1" title="@{initiative_passes_modifier}" />
+            <span class="tiny-span"> = </span>
+            <span name="attr_display_initiative_passes" title="@{initiative_passes}"></span>
+          </div>
+          <div class="display">
+            <span name="attr_display_initiative_passes" title="@{initiative_passes}"></span>
+          </div>
+        </div>
 				<!-- ~~:+: Matrix Initative :+:~~ -->
-				<input type="hidden" name="attr_matrix_mod" value="0" />
-				<input type="hidden" name="attr_matrix_dice" max="5" />
-				<button class="attr-ini" name="matrix initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[(@{matrix_mod}+@{wounds_toggle}+@{modifiers_toggle})+(@{matrix_dice})d6cf0 &{tracker}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">
-					<span class="attr-ini red init-settings" data-i18n="matrixinit">Matrix Ini</span>
-					<span class="attr-ini red init-display" data-i18n="matrixinitiative">Matrix Initiative</span>
-				</button>
-				<div class="attr-und attr-ini">
-					<div class="settings">
-						<input type="number" name="attr_matrix_mod_modifier" value="0" placeholder="0" title="@{matrix_mod_modifier}" /><span class="tiny-span"> + </span>
-						<input type="number" name="attr_matrix_dice_modifier" value="0" min="0" max="4" placeholder="modifier" title="@{matrix_dice_modifier}" />
-						<span class="tiny-span"> = </span>
-						<span name="attr_display_matrix_mod" title="@{matrix_mod}"></span><span class="tiny-span"> + </span>
-						<span name="attr_matrix_dice" title="@{matrix_mod}"></span><span class="tiny-span" data-i18n="d6"> d6</span>
-					</div>
-					<div class="display">
-						<span name="attr_display_matrix_mod" title="@{matrix_mod}"></span><span class="tiny-span"> + </span>
-						<span name="attr_matrix_dice" title="@{matrix_dice}"></span><span class="tiny-span" data-i18n="d6"> d6</span>
-					</div>
-				</div>
+        <input type="hidden" name="attr_matrix_initiative" value="6" />
+        <button class="attr-ini" name="initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{matrixinitiative}}}{{base=^{base}}}{{dice=[[((@{matrix_initiative}+@{modifiers_toggle})d6>5cf0)+(@{matrix_initiative})+(@{wounds_toggle}) &{tracker}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}">
+          <span class="attr-ini red" data-i18n="matrixinitiative"></span>
+        </button>
+        <div class="attr-und">
+          <div class="settings">
+            <input type="number" name="attr_matrix_initiative_modifier" value="0" placeholder="0" title="@{matrix_initiative_modifier}" />
+            <span class="tiny-span"> = </span>
+            <span name="attr_display_matrix_initiative" title="@{matrix_initiative}"></span>
+          </div>
+          <div class="display">
+            <span name="attr_display_matrix_initiative" title="@{matrix_initiative}"></span>
+          </div>
+        </div>
 				<!-- ~~:+: Astral Initative :+:~~ -->
-				<input type="hidden" name="attr_astral_mod" value="6" />
-				<input type="hidden" name="attr_astral_dice" value="3" max="5" />
-				<button class="attr-ini" name="astral initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[(@{astral_mod}+@{wounds_toggle}+@{modifiers_toggle})+(@{astral_dice})d6cf0 &{tracker}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}">
-					<span class="attr-ini red init-settings" data-i18n="astralini">Astral Ini</span>
-					<span class="attr-ini red init-display" data-i18n="astralinitiative">Astral Initiative</span>
-				</button>
-				<div class="attr-und attr-ini">
-					<div class="settings">
-						<div class="hide-magic">
-							<input type="number" name="attr_astral_mod_modifier" value="0" placeholder="modifier" title="@{astral_mod_modifier}" /><span class="tiny-span"> + </span>
-							<input type="number" name="attr_astral_dice_modifier" value="0" min="0" max="3" placeholder="modifier" title="@{astral_dice_modifier}" />
-							<span class="tiny-span"> = </span>
-							<span name="attr_display_astral_mod" title="@{astral_mod}"></span><span class="tiny-span"> + </span>
-							<span name="attr_astral_dice" title="@{astral_dice}"></span><span class="tiny-span" data-i18n="d6"> d6</span>
-						</div>
-					</div>
-					<div class="display">
-						<span name="attr_display_astral_mod" title="@{astral_mod}"></span><span class="tiny-span"> + </span>
-						<span name="attr_astral_dice" title="@{astral_dice}"></span><span class="tiny-span" data-i18n="d6"> d6</span>
-					</div>
-				</div>
+        <input type="hidden" name="attr_astral_initiative" value="6" />
+        <button class="attr-ini" name="initiative" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{astralinitiative}}}{{base=^{base}}}{{dice=[[((@{astral_initiative}+@{modifiers_toggle})d6>5cf0)+(@{astral_initiative})+(@{wounds_toggle}) &{tracker}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}">
+          <span class="attr-ini red" data-i18n="astralinitiative"></span>
+        </button>
+        <div class="attr-und">
+          <div class="settings">
+            <input type="number" name="attr_astral_initiative_modifier" value="0" placeholder="0" title="@{astral_initiative_modifier}" />
+            <span class="tiny-span"> = </span>
+            <span name="attr_display_astral_initiative" title="@{astral_initiative}"></span>
+          </div>
+          <div class="display">
+            <span name="attr_display_astral_initiative" title="@{astral_initiative}"></span>
+          </div>
+        </div>
 				<!-- ~~:+: Composure :+:~~ -->
 				<input type="hidden" name="attr_composure" value="" />
 				<button type="roll" name="composure" value="@{gm_toggle} &{template:rolls}{{header=^{composure}}}{{base=^{base}}}{{dice=[[(@{composure}+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}}"><span data-i18n="composure">Composure</span></button>
@@ -291,18 +303,6 @@
 						<span name="attr_movement_mod" title="@{movement_mod}"></span>
 					</div>
 				</div>
-			</div>
-			<div class="edg-hex" style="width: 50%;">
-				<input class="edge-zero"type="hidden" name="attr_edge_hex" value="0"/>
-				<input class="hex-hider"type="hidden" name="attr_edge" value="1"/>
-				<input type="checkbox" name="attr_edge_hex" value="1" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="2" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="3" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="4" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="5" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="6" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="7" /><span class="hexagon"></span>
-				<input type="checkbox" name="attr_edge_hex" value="8" /><span class="hexagon"></span>
 			</div>
 		</div>
 	</div>
