remove duplicate attribute

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -3275,8 +3275,6 @@
 
 <input type="hidden" name="attr_armor_name" value="select a Primary in Arms" />
 <input type="hidden" name="attr_soak" min="0" value="3" />
-<input type="hidden" name="attr_soak_modifier" min="0" value="3" />
-<input type="hidden" name="attr_armor_rating" min="0" value="3" />
 
 <input type="hidden" name="attr_primary_range_weapon" value="select a Primary in Arms" />
 <input type="hidden" name="attr_primary_range_weapon_skill" />
@@ -3491,12 +3489,13 @@ class PrimaryArmor {
   constructor(name) {
     this.armor_name = name || 'select a Primary in Arms',
     this.soak = 0,
+    this.soak_modifier = 0,
     this.armor_rating = 0,
-    this.acid_protection = 0,
-    this.cold_protection = 0,
-    this.fire_protection = 0,
-    this.radiation_protection = 0,
-    this.electrical_protection = 0
+    this.acid_modifier = 0,
+    this.cold_modifier = 0,
+    this.fire_modifier = 0,
+    this.radiation_modifier = 0,
+    this.electrical_modifier = 0
   }
 }
 
