simplify hidden attr class names

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -2,9 +2,9 @@
 <div class="background">
 
 <!-- HIDDEN STYLING ATTRS -->
-<input type="hidden" class="type-toggle" name="attr_sheettype" value="mortal1" />
-<input type="hidden" class="game-line-toggle" name="attr_game_line" value="mortal" />
-<input type="hidden" class="edition-toggle" name="attr_edition" value="1" />
+<input type="hidden" class="type" name="attr_sheettype" value="mortal1" />
+<input type="hidden" class="game-line" name="attr_game_line" value="mortal" />
+<input type="hidden" class="edition" name="attr_edition" value="1" />
 
 <!-- SHEET OPTIONS & PAGE TABS-->
 <input type="radio" class="attr sheetoptions settingssheet" name="attr_pagenumber" title="Settings" value="settings" />
@@ -25,7 +25,7 @@
     <div class="spacer"></div>
     <div class="spacer"></div>
 
-    <div class="edition" data-i18n="first-edition">1st Edition</div>
+    <div class="edition-label" data-i18n="first-edition">1st Edition</div>
 
     <div>
         <button type="action" class="toggle active-mortal1" name="act_sheet_type_mortal1" title="Mortal" data-i18n="chronicles-of-darkness">Chronicles of Darkness</button>
@@ -49,7 +49,7 @@
 
     <div class="spacer"></div>
     
-    <div class="edition" data-i18n="second-edition">2nd Edition</div>
+    <div class="edition-label" data-i18n="second-edition">2nd Edition</div>
 
     <div>
         <button type="action" class="toggle active-mortal2" name="act_sheet_type_mortal2" title="Mortal" data-i18n="chronicles-of-darkness">Chronicles of Darkness</button>
