fix attribute changes

--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -432,9 +432,9 @@
                   <select class="skill-select" name="attr_skill" value="Close Combat Group" title="@{repeating_active_${x}_skill}"><option class="option-headers" disabled="true" data-i18n="combatskills">Combat Skills</option>
 <option class="option-groups" value="Close Combat Group" data-i18n="closecombatgroup">Close Combat Group</option>
 <option class="option-groups" value="Firearms Group" data-i18n="firearmsgroup">Firearms Group</option>
-<option value="Archery" data-i18n="Archery">Archery</option>
+<option value="Archery" data-i18n="archery">Archery</option>
 <option value="Automatics" data-i18n="automatics">Automatics</option>
-<option value="Blades" data-i18n="Blades">Blades</option>
+<option value="Blades" data-i18n="blades">Blades</option>
 <option value="Clubs" data-i18n="clubs">Clubs</option>
 <option value="Dodge" data-i18n="Dodge">Dodge</option>
 <option value="Exotic Melee" data-i18n="exoticmelee">Exotic Melee</option>
@@ -1001,7 +1001,7 @@
                   <select name="attr_skill" title="@{repeating_melee_${x}_skill}" value="@{closecombat}">
                     <optgroup label="Combat Skills">Combat Skills
                       <option data-i18n="closecombatgroup" value="@{closecombat}" selected="selected">Close Combat Group</option>
-                      <option data-i18n="Blades" value="@{Blades}">Blades</option>
+                      <option data-i18n="blades" value="@{blades}">Blades</option>
                       <option data-i18n="clubs" value="@{clubs}">Clubs</option>
                       <option data-i18n="exoticmelee" value="0">Blades</option>
                       <option data-i18n="unarmedcombat" value="@{unarmedcombat}">Unarmed Combat</option>
@@ -2557,9 +2557,9 @@
           <select class="skill-select" name="attr_skill" title="@{repeating_active_${x}_skill}" value="Close Combat Group"><option class="option-headers" disabled="true" data-i18n="combatskills">Combat Skills</option>
 <option class="option-groups" value="Close Combat Group" data-i18n="closecombatgroup">Close Combat Group</option>
 <option class="option-groups" value="Firearms Group" data-i18n="firearmsgroup">Firearms Group</option>
-<option value="Archery" data-i18n="Archery">Archery</option>
+<option value="Archery" data-i18n="archery">Archery</option>
 <option value="Automatics" data-i18n="automatics">Automatics</option>
-<option value="Blades" data-i18n="Blades">Blades</option>
+<option value="Blades" data-i18n="blades">Blades</option>
 <option value="Clubs" data-i18n="clubs">Clubs</option>
 <option value="Dodge" data-i18n="Dodge">Dodge</option>
 <option value="Exotic Melee" data-i18n="exoticmelee">Exotic Melee</option>
@@ -3207,7 +3207,7 @@
 <input type="hidden" name="attr_alchemy" min="0" value="0" />
 <input type="hidden" name="attr_animalhandling" min="0" value="0" />
 <input type="hidden" name="attr_arcana" min="0" value="0" />
-<input type="hidden" name="attr_Archery" min="0" value="0" />
+<input type="hidden" name="attr_archery" min="0" value="0" />
 <input type="hidden" name="attr_armorer" min="0" value="0" />
 <input type="hidden" name="attr_artificing" min="0" value="0" />
 <input type="hidden" name="attr_artisan" min="0" value="0" />
@@ -3220,7 +3220,7 @@
 <input type="hidden" name="attr_binding" min="0" value="0" />
 <input type="hidden" name="attr_biotech" min="0" value="0" />
 <input type="hidden" name="attr_biotechnology" min="0" value="0" />
-<input type="hidden" name="attr_Blades" min="0" value="0" />
+<input type="hidden" name="attr_blades" min="0" value="0" />
 <input type="hidden" name="attr_chemistry" min="0" value="0" />
 <input type="hidden" name="attr_closecombat" min="0" value="0" />
 <input type="hidden" name="attr_clubs" min="0" value="0" />
