--- a/Shadowrun4thEdition/src/html/hidden.html
+++ b/Shadowrun4thEdition/src/html/hidden.html
@@ -43,7 +43,7 @@
 <input type="hidden" name="attr_alchemy" min="0" value="0" />
 <input type="hidden" name="attr_animalhandling" min="0" value="0" />
 <input type="hidden" name="attr_arcana" min="0" value="0" />
-<input type="hidden" name="attr_Archery" min="0" value="0" />
+<input type="hidden" name="attr_archery" min="0" value="0" />
 <input type="hidden" name="attr_armorer" min="0" value="0" />
 <input type="hidden" name="attr_artificing" min="0" value="0" />
 <input type="hidden" name="attr_artisan" min="0" value="0" />
@@ -56,7 +56,7 @@
 <input type="hidden" name="attr_binding" min="0" value="0" />
 <input type="hidden" name="attr_biotech" min="0" value="0" />
 <input type="hidden" name="attr_biotechnology" min="0" value="0" />
-<input type="hidden" name="attr_Blades" min="0" value="0" />
+<input type="hidden" name="attr_blades" min="0" value="0" />
 <input type="hidden" name="attr_chemistry" min="0" value="0" />
 <input type="hidden" name="attr_closecombat" min="0" value="0" />
 <input type="hidden" name="attr_clubs" min="0" value="0" />
