save progress. commlinks added

--- a/Shadowrun4thEdition/src/html/hidden.html
+++ b/Shadowrun4thEdition/src/html/hidden.html
@@ -3,7 +3,8 @@
 <input type="hidden" name="attr_attribute_roll" value="" />
 
 <input type="hidden" name="attr_armor_name" value="select a Primary in Arms" />
-<input type="hidden" name="attr_soak" min="0" value="3" />
+<input type="hidden" name="attr_impact" min="0" value="3" />
+<input type="hidden" name="attr_ballistic" min="0" value="3" />
 
 <input type="hidden" name="attr_primary_range_weapon" value="select a Primary in Arms" />
 <input type="hidden" name="attr_primary_range_weapon_skill" />
@@ -24,10 +25,8 @@
 
 <input type="hidden" name="attr_initiative_mod" value="6" />
 <input type="hidden" name="attr_initiative_passes" min="1" max="5" value="1" />
-<input type="hidden" name="attr_astral_mod" value="6" />
-<input type="hidden" name="attr_astral_dice" max="5" value="3" />
-<input type="hidden" name="attr_matrix_mod" value="0" />
-<input type="hidden" name="attr_matrix_dice" max="5" />
+<input type="hidden" name="attr_astral_initiative" max="0" value="0" />
+<input type="hidden" name="attr_matrix_initiative" value="0" />
 <input type="hidden" name="attr_walk" value="12" />
 <input type="hidden" name="attr_run" value="24" />
 <input type="hidden" name="attr_physical" value="0" />
