hide the other sheets until they are converted

--- a/Shadowrun4thEdition/src/html/core.html
+++ b/Shadowrun4thEdition/src/html/core.html
@@ -16,9 +16,9 @@
 					<span name="attr_armor_rating" title="@{armor_rating}"></span>
 				</button>
 				<div class="armor-buttons">
-					<button type="roll" name="roll_defense" value="@{gm_toggle} &{template:rolls}{{header=^{defense}}}{{base=^{base}}}{{dice=[[((@{defense})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Defense Roll"><span class="pictosC" title="@{defense}">e</span></button>
-					<button type="roll" name="roll_ballistic" value="@{gm_toggle} &{template:rolls}{{header=^{ballistic}}}{{base=^{base}}}{{dice=[[((@{ballistic}+@{body})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span class="pictos-custom" title="@{ballistic}">t</span></button>
-          <button type="roll" name="roll_ballistic" value="@{gm_toggle} &{template:rolls}{{header=^{impact}}}{{base=^{base}}}{{dice=[[((@{impact}+@{body})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span class="text-capitalize pictos" title="@{impact}">J</span></button>
+					<button type="roll" name="roll_defense" value="@{gm_toggle} &{template:rolls}{{header=^{defense}}}{{base=^{base}}}{{dice=[[((@{defense})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}" title="Defense Roll"><span class="pictos-custom" title="@{defense}">e</span></button>
+					<button type="roll" name="roll_ballistic" value="@{gm_toggle} &{template:rolls}{{header=^{ballistic}}}{{base=^{base}}}{{dice=[[((@{ballistic}+@{soak})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span class="pictos-custom" title="@{ballistic}">t</span></button>
+          <button type="roll" name="roll_impact" value="@{gm_toggle} &{template:rolls}{{header=^{impact}}}{{base=^{base}}}{{dice=[[((@{impact}+@{soak})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span class="text-capitalize pictos" title="@{impact}">J</span></button>
 				</div>
 			</div>
 			<div class="row-long cc-row">
