--- a/Shadowrun4thEdition/src/html/options.html
+++ b/Shadowrun4thEdition/src/html/options.html
@@ -16,9 +16,9 @@
 						<select name="attr_sheet_type" title="@{sheet_type}" value='pc'>
 							<option value="pc" data-i18n="pc" selected>PC</option>
 							<option value="grunt" data-i18n="grunt">grunt</option>
-							<option value="host" data-i18n="host">Host</option>
+							<!---<option value="host" data-i18n="host">Host</option>
 							<option value="sprite" data-i18n="sprite">Sprite</option>
-							<option value="vehicle" data-i18n="vehicle">Vehicle</option>
+							<option value="vehicle" data-i18n="vehicle">Vehicle</option>-->
 						</select>
 					</div>
 					<hr />
